--- a/index.html
+++ b/index.html
@@ -7,45 +7,163 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Notifications page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  Notifications 3
+  <div class="container">
+    <div class="notifications">
+      <div class="notifications__top">
+        <div class="notifications__counter">
+          <h3>Notifications</h3>
+          <span id="notifications-number">0</span>
+        </div>
 
-  Mark all as read
+        <button id="read-all-notifications">Mark all as read</button>
+      </div>
 
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
+      <div class="notifications__list">
+        <div class="notifications__list-item unread">
+          <div class="avatar-wrapper">
+            <img src="./assets/images/avatar-mark-webber.webp" alt="">
+          </div>
 
-  Angela Gray followed you
-  5m ago
-
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
-
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
-
-  Kimberly Smith commented on your picture
-  1 week ago
-
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago
+          <div class="notifications__list-info">
+            <div class="info">
+              <div class="notification">
+                <span class="user-name">Mark Webber</span> reacted to your recent post <span class="path">My first tournament today!</span>
+              </div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+              <div class="when">
+                1m ago
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="notifications__list-item unread">
+          <div class="avatar-wrapper">
+            <img src="./assets/images/avatar-angela-gray.webp" alt="">
+          </div>
+
+          <div class="notifications__list-info">
+            <div class="info">
+              <div class="notification">
+                <span class="user-name">Angela Gray</span> followed you
+              </div>
+  
+              <div class="when">
+                5m ago
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="notifications__list-item unread">
+          <div class="avatar-wrapper">
+            <img src="./assets/images/avatar-jacob-thompson.webp" alt="">
+          </div>
+
+          <div class="notifications__list-info">
+            <div class="info">
+              <div class="notification">
+                <span class="user-name">Jacob Thompson</span> has joined your group <span class="link">Chess Club</span>
+              </div>
+  
+              <div class="when">
+                1 day ago
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="notifications__list-item">
+          <div class="avatar-wrapper">
+            <img src="./assets/images/avatar-rizky-hasanuddin.webp" alt="">
+          </div>
+
+          <div class="notifications__list-info">
+            <div class="info">
+              <div class="notification">
+                <span class="user-name">Rizky Hasanuddin</span> sent you a private message
+              </div>
+  
+              <div class="when">
+                5 days ago
+              </div>
+  
+              <div class="message-wrapper">
+                Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
+                I'm already having lots of fun and improving my game.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="notifications__list-item">
+          <div class="avatar-wrapper">
+            <img src="./assets/images/avatar-kimberly-smith.webp" alt="">
+          </div>
+
+          <div class="notifications__list-info">
+
+            <div class="info">
+              <div class="notification">
+                <span class="user-name">Kimberly Smith</span> commented on your picture
+              </div>
+  
+              <div class="when">
+                1 week ago
+              </div>
+            </div>
+
+            <div class="picture">
+              <img src="./assets/images/image-chess.webp" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="notifications__list-item">
+          <div class="avatar-wrapper">
+            <img src="./assets/images/avatar-nathan-peterson.webp" alt="">
+          </div>
+
+          <div class="notifications__list-info">
+            <div class="info">
+              <div class="notification">
+                <span class="user-name">Nathan Peterson</span> reacted to your recent post <span class="path">5 end-game strategies to increase your win rate</span>
+              </div>
+  
+              <div class="when">
+                2 weeks ago
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="notifications__list-item">
+          <div class="avatar-wrapper">
+            <img src="./assets/images/avatar-anna-kim.webp" alt="">
+          </div>
+
+          <div class="notifications__list-info">
+            <div class="info">
+              <div class="notification">
+                <span class="user-name">Anna Kim</span> left the group <span class="link">Chess Club</span>
+              </div>
+  
+              <div class="when">
+                2 weeks ago
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
   </div>
+  
+    <script src="script.js"></script>
+
 </body>
 </html>
